--- a/bower.json
+++ b/bower.json
@@ -18,11 +18,12 @@
     "test",
     "tests"
   ],
-  "dependencies": {
-    "bootstrap-sass": "~3.3.3",
+  "devDependencies": {
     "jquery": "~2.1.3",
-    "underscore": "~1.8.2",
+	"bootstrap-sass": "~3.3.3",
+	"underscore": "~1.8.2",
     "jquery-mousewheel": "~3.1.12",
-    "jquery.svg": "*"
+    "jquery.svg": "*",
+    "jquery.finger": "~0.1.2"
   }
 }
