--- a/bower.json
+++ b/bower.json
@@ -20,10 +20,11 @@
   ],
   "devDependencies": {
     "jquery": "~2.1.3",
-	"bootstrap-sass": "~3.3.3",
-	"underscore": "~1.8.2",
+    "bootstrap-sass": "~3.3.3",
+    "underscore": "~1.8.2",
     "jquery-mousewheel": "~3.1.12",
     "jquery.svg": "*",
-    "jquery.finger": "~0.1.2"
+    "jquery.finger": "~0.1.2",
+    "font-awesome": "~4.3.0"
   }
 }
