--- a/bower.json
+++ b/bower.json
@@ -26,5 +26,8 @@
     "jquery.finger": "~0.1.2",
     "font-awesome": "~4.3.0",
     "Snap.svg": "~0.3.0"
+  },
+  "dependencies": {
+    "animate.css": "~3.2.5"
   }
 }
