--- a/bower.json
+++ b/bower.json
@@ -18,16 +18,13 @@
     "test",
     "tests"
   ],
-  "devDependencies": {
+  "dependencies": {
     "jquery": "~2.1.3",
     "bootstrap-sass": "~3.3.3",
     "underscore": "~1.8.2",
     "jquery-mousewheel": "~3.1.12",
     "jquery.finger": "~0.1.2",
-    "font-awesome": "~4.3.0",
-    "Snap.svg": "~0.3.0"
-  },
-  "dependencies": {
-    "animate.css": "~3.2.5"
+    "Snap.svg": "~0.3.0",
+    "tinycolor": "~1.1.2"
   }
 }
