--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt": "^0.4.5",
     "grunt-bower-concat": "^0.4.0",
     "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-uglify": "^0.8.0",
     "load-grunt-tasks": "^3.1.0"
   }
