--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "jquery-mousewheel": "~3.1.12",
     "jquery.finger": "~0.1.2",
     "Snap.svg": "~0.3.0",
-    "tinycolor": "~1.1.2"
+    "tinycolor": "~1.1.2",
+    "font-awesome": "~4.3.0"
   }
 }
