--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   },
   "homepage": "https://github.com/violy/curriculumvitae",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-bower-concat": "^0.4.0",
+    "bower": "^1.8.8",
+    "grunt": "^1.0.4",
+    "grunt-bower-concat": "^1.0.0",
     "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-cssmin": "^0.12.2",
-    "grunt-contrib-uglify": "^0.8.0",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-uglify": "^4.0.1",
     "load-grunt-tasks": "^3.1.0"
   }
 }
