--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cv2",
+  "name": "arthurviolycv2",
   "version": "0.0.0",
   "description": "curriculum vitae Arthur Violy",
   "main": "Gruntfile.js",
@@ -11,20 +11,22 @@
     "url": "https://github.com/violy/curriculumvitae.git"
   },
   "keywords": [
-    "CV"
+    "CV",
+    "Curriculum vitæ",
+    "HTML",
+    "CSS"
   ],
   "author": "Arthur Violy",
-  "license": "Artistic Licence 2.0",
+  "license": "LAL-1.2",
   "bugs": {
     "url": "https://github.com/violy/curriculumvitae/issues"
   },
   "homepage": "https://github.com/violy/curriculumvitae",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-bower-concat": "^0.4.0",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-cssmin": "^0.12.2",
-    "grunt-contrib-uglify": "^0.8.0",
-    "load-grunt-tasks": "^3.1.0"
+    "grunt": "^1.0.4",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "load-grunt-tasks": "^5.1.0"
   }
 }
